--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 /*===== Google Fonts =====*/
-@import url('https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap');
+body {
+    font-family: 'Calibri', sans-serif;
+}
+
 /*===== Global CSS =====*/
 html
 {
